--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 </body>
-<img src="images/IMG_3260.jpg" alt="IMG_3260" width="600px"/> 
+<img src="Images/IMG_3260.jpg" alt="IMG_3260" width="600px"/> 
 
 
 
