--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <h3>Call: 646 508 0365</h3>
 </body>
 
-<img src="IMG_3260.jpg" alt="IMG_3260" width="600px"/> 
+<img src="Images/IMG_3260.jpg" alt="IMG_3260" width="600px"/> 
 
 
 
