--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
 <h2>Email: kiuming.tung@gmail.com
 </h2>
 <h3>Call: 646 508 0365</h3>
+<h4>Hi, My name is Bosco. I like video games and art</h4>
+	
 </body>
 
 <img src="Images/IMG_3260.jpg" alt="IMG_3260" width="600px"/> 
